--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       height: auto;
       margin-bottom: 30px;
     }
+    button:disabled{
+        cursor: not-allowed !important;
+    }
   </style>
 </head>
 <body>
